Bug 1852584 - Disable rounded bottom corners for performance regressions for now. r=stransky
Differential Revision: https://phabricator.services.mozilla.com/D187914

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -15315,7 +15315,7 @@
 # pref for emergency purposes.
 - name: widget.gtk.rounded-bottom-corners.enabled
   type: bool
-  value: true
+  value: false
   mirror: always
   rust: true
 
