--- a/js/xpconnect/tests/unit/xpcshell.ini
+++ b/js/xpconnect/tests/unit/xpcshell.ini
@@ -187,6 +187,7 @@ head = head_watchdog.js
 head = head_watchdog.js
 [test_weak_keys.js]
 [test_symbols_as_weak_keys.js]
+skip-if = !nightly_build
 [test_xpcwn_instanceof.js]
 [test_xpcwn_tamperproof.js]
 [test_xrayed_arguments.js]
