--- a/toolkit/components/search/tests/xpcshell/searchconfigs/xpcshell.toml
+++ b/toolkit/components/search/tests/xpcshell/searchconfigs/xpcshell.toml
@@ -42,6 +42,7 @@ requesttimeoutfactor = 2
 
 ["test_searchconfig_validates.js"]
 support-files = [
+  "../../../schema/search-config-overrides-schema.json",
   "../../../schema/search-config-schema.json",
   "../../../schema/search-config-ui-schema.json",
   "../../../schema/search-config-v2-schema.json",
