Bug 1824856 - update commit urls in slack notifications. r=bhearsum,releng-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D201531

--- a/taskcluster/ci/ui-test-apk/kind.yml
+++ b/taskcluster/ci/ui-test-apk/kind.yml
@@ -91,7 +91,7 @@ job-defaults:
                             "type": "section",
                             "text": {
                               "type": "mrkdwn",
-                              "text": "*Source*: <${task.payload.env.MOBILE_BASE_REPOSITORY}/commit/${task.payload.env.MOBILE_HEAD_REV}|Commit> :github:"
+                              "text": "*Source*: <${task.payload.env.GECKO_BASE_REPOSITORY}/rev/${task.payload.env.GECKO_HEAD_REV}|Commit> :hg:"
                             }
                           },
                           {
