Bug 1877692 - get GeckoView from ${objdir}/gradle/maven in local builds. r=gl,amejiamarmol,geckoview-reviewers
This means fenix/a-c/focus can pick up right after `./mach build` and
find geckoview.

Differential Revision: https://phabricator.services.mozilla.com/D201526

--- a/mobile/android/focus-android/build.gradle
+++ b/mobile/android/focus-android/build.gradle
@@ -88,6 +88,10 @@ allprojects {
                 }
             }
         }
+
+        maven {
+            url "${gradle.mozconfig.topobjdir}/gradle/maven"
+        }
     }
 }
 
