--- a/mobile/android/fenix/build.gradle
+++ b/mobile/android/fenix/build.gradle
@@ -59,6 +59,10 @@ allprojects {
                 }
             }
         }
+
+        maven {
+           url "${gradle.mozconfig.topobjdir}/gradle/maven"
+        }
     }
 
     tasks.withType(KotlinCompile).configureEach {
