Bug 1877412 - disable parallel gradle tasks for A-C lint. r=glandium,firefox-build-system-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D201540

--- a/taskcluster/ci/source-test/android-lint.yml
+++ b/taskcluster/ci/source-test/android-lint.yml
@@ -40,6 +40,7 @@ android-components:
     run:
         pre-gradlew:
             - ["cd", "mobile/android/android-components"]
+        gradlew: ["--no-parallel"]
     treeherder:
         symbol: lint(AC)
 
